--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.488.0",
     "next": "14.2.28",
     "next-auth": "^4.24.11",
     "react": "^18",
