--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
@@ -21,20 +24,27 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.55.0",
+    "rimraf": "^6.0.1",
     "security-champions-league": "file:",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.6.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.28",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "postcss": "^8",
     "prisma": "^6.6.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.30.1"
   }
 }
