--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.2.7",
+    "@radix-ui/react-tooltip": "^1.2.3",
     "@uploadthing/react": "^7.3.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
